# django-statuspage

./: .coveragerc  .gitignore  .pre-commit-config.yaml  .travis.yml  README.md  README.rst  api.html  genindex.html  howto.html  index.html  objects.inv  py-modindex.html  pyproject.toml  requirements.txt  search.html  searchindex.js  setup.cfg  setup.py  styleguide.html  todo.html
_sources/: api.rst.txt  howto.rst.txt  index.rst.txt  styleguide.rst.txt  todo.rst.txt
docs/: .publish.sh  api.rst  conf.py  howto.rst  index.rst  styleguide.rst  todo.rst
src/djangostatuspage/: __init__.py  admin.py  apps.py  config.py  models.py  schemas.py  services.py  shortcuts.py  signals.py  tests.py  views.py
src/djangostatuspage/migrations/: 0001_initial.py  0002_alter_incident_id_at_origin.py  0002_auto_20211217_1251.py  0003_alter_incident_origin.py  0004_auto_20211215_1955.py  0005_alter_incident_affected_system.py  0006_auto_20211215_2002.py  0007_auto_20211215_2102.py  0008_alter_incidentupdate_effective_until.py  0009_incident_title.py  0010_alter_incident_title.py  0011_alter_incidentupdate_title.py
src/djangostatuspage/tests/: conftest.py  manage.py  pytest.ini  test_config.py  test_models.py  test_services.py  test_shortcuts.py  test_status_api.py
src/djangostatuspage/tests/mystatuspage/: __init__.py  asgi.py  settings.py  settings_test.py  urls.py  wsgi.py
