[metadata]
name = djangostatuspage
version = attr: djangostatuspage.__name__
description = Status Page plugin for Django
url = https://github.com/ivangeorgiev/django-statuspage
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Developers
    License :: GPL
    Environment :: Web Environment
    Framework :: Django
    Framework :: Django :: 3.2
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
project_urls =
    Documentation = https://py-gems.readthedocs.io/en/latest/index.html
    Source = https://github.com/ivangeorgiev/py-gems
    Tracker = https://github.com/ivangeorgiev/py-gems/issues

[options]
# include_package_data = true
package_dir =
   = src
; packages = find:
packages = find_namespace:
python_requires = >=3.6
install_requires =
    django>=3.2,<4.0
    djangorestframework >= 3.12.4

[options.packages.find]
where = src

# [options.entry_points]
# console_scripts =
#     pygems = pygems.cli:main
# pygems.demoplugin =
#     hello-world = pygems.demo.helloworld:hi

[flake8]
exclude = build,.git,.tox,./tests/.env,**/migrations/*
ignore = W504,W601
max-line-length = 119
